<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.ukutagamesv1.activities.MainActivity">


    <item
        android:id="@+id/action_platform"
        android:icon="@drawable/ic_white_game_controller"
        android:title="Platforms"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

</menu>