<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.AddEditPlatformActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:inputType="text">
    </EditText>

    <EditText
        android:id="@+id/edit_text_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Developer"
        android:inputType="textMultiLine">
    </EditText>

    <EditText
        android:id="@+id/edit_text_launch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Launch Year"
        android:inputType="text">
    </EditText>

</LinearLayout>