<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.ukutagamesv1.activities.PlatformsActivity">

    <item
        android:id="@+id/save_platform"
        android:icon="@drawable/ic_save"
        android:title="Save"
        app:showAsAction="ifRoom" />

</menu>